Table: fix empty text vertical alignment issue on IE10+

--- a/packages/theme-chalk/src/table.scss
+++ b/packages/theme-chalk/src/table.scss
@@ -27,6 +27,7 @@
   }
 
   @include e(empty-text) {
+    line-height: 60px;
     width: 50%;
     color: $--color-text-secondary;
   }
